--- a/LTGameSdkOneStore/src/main/AndroidManifest.xml
+++ b/LTGameSdkOneStore/src/main/AndroidManifest.xml
@@ -5,5 +5,8 @@
         <meta-data
             android:name="iap:api_version"
             android:value="5" />
+        <meta-data
+            android:name="iap:view_option"
+            android:value="popup" />
     </application>
 </manifest>
